# newlang

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  Syntax.md  build_doc.sh  build_options.txt  make_version.sh  mkdocs.yml  playground.cgi  site.sh
.github/workflows/: hugo.yaml
contrib/: build.cmd  build.sh
contrib/logger/: LICENSE  logger.cpp  logger.h  logger_test.cpp
core/: .gitignore  Makefile  autocomplete.h  builtin.cpp  builtin.h  compile_syntax.sh  context.cpp  context.h  fraction.h  lexer.l  newlang.cpp  newlang.h  nlc.cpp  nlc.h  object.cpp  object.h  parser.cpp  parser.h  parser.y  pch.h  term.cpp  term.h  types.h  variable.cpp  variable.h  warning_pop.h  warning_push.h
core/nbproject/: Makefile-Debug.mk  Makefile-GCOV.mk  Makefile-LLVM.mk  Makefile-LLVM_GCC.mk  Makefile-Release.mk  Makefile-UnitTest-Win32.mk  Makefile-UnitTest-Win64.mk  Makefile-UnitTest.mk  Makefile-UnitTest_LLVM.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-GCOV.bash  Package-LLVM.bash  Package-LLVM_GCC.bash  Package-Release.bash  Package-UnitTest-Win32.bash  Package-UnitTest-Win64.bash  Package-UnitTest.bash  Package-UnitTest_LLVM.bash  configurations.xml  project.xml
core/nlp/: fileio.nlp
core/test/: alg_test.cpp  compiler_test.cpp  eval_test.cpp  fraction_test.cpp  lexer_test.cpp  newlang_test.cpp  nlc_test.cpp  object_test.cpp  parser_test.cpp
docs/: 404.html  index.html  index.md  index.xml  iterators.md  newlang_doc.md  offline-search-index.json  op_convert.md  ops.md  sitemap.xml  syntax.md  syntax_dsl.md  type_func.md  type_iter.md  type_native.md  type_nor.md  type_oop.md  type_other.md  type_str.md  types.md  versions.md
docs/blog/: index.html  index.xml
docs/categories/: index.html  index.xml
docs/docs/: index.html  index.xml
docs/en/: _index.html  about.md  newlang_doc.md  ops.md  sitemap.xml  syntax.md  syntax_dsl.md  syntax_macro.md  type_func.md  type_iter.md  type_native.md  type_nor.md  type_oop.md  type_other.md  type_str.md  types.md  versions.md
docs/js/: main.js
docs/playground/: index.html  index.xml  rational.src
docs/ru/: 404.html  _index.html  about.md  index.html  index.md  index.xml  newlang_doc.md  ops.md  roadmap.md  sitemap.xml  syntax.md  syntax_dsl.md  syntax_macro.md  type_func.md  type_iter.md  type_native.md  type_nor.md  type_oop.md  type_other.md  type_str.md  types.md  versions.md
docs/ru_en/: href_rename.sh  omegat.project  ru_en-level1.tmx  ru_en-level2.tmx  ru_en-omegat.tmx
docs/scss/: main.css
docs/search/: index.html
docs/tags/: index.html  index.xml
examples/: _run.sh  class.nlp  dsl.nlp  fact_1000.nlp  fact_40_dsl.nlp  fibonacci.src  fileio.nlm  fileio.nlp  foreach.nlp  fraction.nlp  hello.nlp  hello.src  hello_embed.src  rational.nlp  speed_test.nlp  speed_test.py  tensor.nlp  tensor.src  thread.src
lib/: .gitignore  Makefile  analysis.cpp  analysis.h  build_options.data  builtin.cpp  builtin.h  context.cpp  context.h  diag.cpp  diag.h  include.h  include_h_i.data  jit.cpp  jit.h  lexer.cpp  lexer.h  lexer.l  logger.cpp  logger.h  macro.cpp  macro.h  module.cpp  module.h  nlc-rt.h  object.cpp  object.h  parser.cpp  parser.h  parser.y  rational.cpp  rational.h  runtime.cpp  runtime.h  system.cpp  system.h  term.cpp  term.h  transpiler.cpp  transpiler.h  (+3 more)
lib/nbproject/: Makefile-UnitTest.mk  Makefile-impl.mk  Makefile-nlc-jit-Debug.mk  Makefile-nlc-rt-Debug.mk  Makefile-variables.mk  Package-UnitTest.bash  Package-nlc-jit-Debug.bash  Package-nlc-rt-Debug.bash  configurations.xml  project.xml
lib/test/: alg_test.cpp  ast_test.cpp  class_test.cpp  example_test.cpp  include_test.cpp  jit_test.cpp  lexer_test.cpp  llvm_test.cpp  macro_test.cpp  module_test.cpp  nlc_test.cpp  object_test.cpp  parser_analysis_test.cpp  parser_test.cpp  rational_test.cpp  run_test.cpp  system_test.cpp
libffi/: libffi.cpp  libffi.sln  libffi.vcxproj
nlc/: autocomplete.h  build_options.txt  nlc.cpp  nlc.h
nlc-win/: nlc.vcxproj
nlc/nbproject/: Makefile-Release.mk  Makefile-UnitTest-JIT-Debug.mk  Makefile-UnitTest-RT-Debug.mk  Makefile-impl.mk  Makefile-nlc-Debug.mk  Makefile-variables.mk  Package-Release.bash  Package-UnitTest-JIT-Debug.bash  Package-UnitTest-RT-Debug.bash  Package-nlc-Debug.bash  configurations.xml  project.properties  project.xml
nlc/test/: alg_test.cpp  ast_test.cpp  class_test.cpp  diag_test.cpp  example_test.cpp  include_test.cpp  jit_test.cpp  lexer_test.cpp  llvm_test.cpp  logger_test.cpp  macro_test.cpp  module_test.cpp  object_test.cpp  parser_analysis_test.cpp  parser_test.cpp  run_test.cpp  system_test.cpp  transpiler_test.cpp  unittest.cpp
nlc/win/: nlc.sln  nlc.vcxproj
runtime/: __init__.nlp  dsl.nlp
site/: .gitignore  go.mod  go.sum  hugo.toml  package.json  site.sh
site/content/: CNAME  README.txt  about.md  roadmap.md  rules.md
site/layouts/: playground.html
src/: Makefile  analysis.cpp  analysis.h  autocomplete.h  builtin.cpp  builtin.h  compile_syntax.sh  compiler.cpp  compiler.h  context.cpp  context.h  diag.cpp  diag.h  dsl.cpp  dsl.nlp  fraction.h  lexer.cpp  lexer.h  lexer.l  logger.cpp  logger.h  macro.cpp  macro.h  module.cpp  module.h  named.cpp  named.h  newlang.cpp  newlang.h  nlc.cpp  nlc.h  object.cpp  object.h  parser.cpp  parser.h  parser.y  pch.h  rational.h  runtime.cpp  runtime.h  (+10 more)
src/nbproject/: Makefile-Debug.mk  Makefile-Debug_LLVM.mk  Makefile-GCOV.mk  Makefile-LLVM.mk  Makefile-LLVM_GCC.mk  Makefile-Release.mk  Makefile-UnitTest-Win32.mk  Makefile-UnitTest-Win64.mk  Makefile-UnitTest.mk  Makefile-UnitTest_LLVM.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_LLVM.bash  Package-GCOV.bash  Package-LLVM.bash  Package-LLVM_GCC.bash  Package-Release.bash  Package-UnitTest-Win32.bash  Package-UnitTest-Win64.bash  Package-UnitTest.bash  Package-UnitTest_LLVM.bash  configurations.xml  project.properties  project.xml
src/test/: alg_test.cpp  ast_test.cpp  class_test.cpp  compiler_test.cpp  diag_test.cpp  eval_test.cpp  example_test.cpp  fraction_test.cpp  (+14 more)
(+396 files in other folders)
